syntax = "proto3";
package events;

import "google/protobuf/timestamp.proto";
import "common/location.proto";

message BikeDropOff {
  google.protobuf.Timestamp reported = 1;
  string station_id = 2;
  common.Location location = 3;
  string company = 4;
  int32 dif = 5;
  int32 docks_available = 6;
  int32 bikes_available = 7;
}